# pgstream

./: README.md  create.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 743755443bbe_init.py
src/pgstream/: lib.py
